unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Product_Write_Off_Recovery_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Product_Write_Off_Recovery_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the write-off recovery general ledger account for the loan product.</inlineHelpText>
    <label>Product Write-Off Recovery Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipName>Loan_Products7</relationshipName>
    <type>Lookup</type>
</CustomField>