unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Repayment_Procedure__c.field-meta.xml
<CustomField>
    <fullName>loan__Repayment_Procedure__c</fullName>
    <inlineHelpText>This  field contains the procedure which will be followed to create the installment schedule. The two types of procedures are:
 EMI (Equated Monthly Installments) and Flexible.</inlineHelpText>
    <label>Repayment Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
                <label>Equal Monthly Installments</label>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>