unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Reschedule_Option_on_Excess_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Reschedule_Option_on_Excess_Payment__c</fullName>
    <description>The option used for rescheduling the loan when an excess payment equal to or more than the excess threshold for reschedule is received. You can reschedule by changing either the payment amount or the tenure of the loan.</description>
    <inlineHelpText>The option used for rescheduling the loan when an excess payment equal to or more than the excess threshold for reschedule is received. You can reschedule by changing either the payment amount or the tenure of the loan.</inlineHelpText>
    <label>Reschedule Option on Excess Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Payment Amount</fullName>
            </value>
            <value>
                <fullName>Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>