unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Time_Counting_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Time_Counting_Method__c</fullName>
    <inlineHelpText>1) Month and Days will use 360 days in a year for the Interest calculation.
2) Actual Days will use 365 days in a year for the Interest calculation.</inlineHelpText>
    <label>Time Counting Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual Days</fullName>
                <default>true</default>
                <label>Actual Days</label>
            </value>
            <value>
                <fullName>Month and Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>