unpackaged/main/default/objects/loan__Loan_Product__c/fields/loan__Write_off_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Write_off_Tolerance_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The Write off tolerance amount determines the maximum amount that the system can write off</inlineHelpText>
    <label>Write off Tolerance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>