unpackaged/main/default/objects/loan__Loan_Product__c/recordTypes/loan__Amz_Based_Loan_Product_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Amz_Based_Loan_Product_Record_Type</fullName>
    <active>true</active>
    <description>Amortization Based Payment Processing</description>
    <label>Amz Based Loan Product Record Type</label>
</RecordType>