unpackaged/main/default/objects/loan__Loan_Product__c/recordTypes/loan__Flexible_Amz_Loan_Product.recordType-meta.xml
<RecordType>
    <fullName>loan__Flexible_Amz_Loan_Product</fullName>
    <active>true</active>
    <description>Flexible Amz Loan Product Record Type</description>
    <label>Flexible Amz Loan Product Record Type</label>
</RecordType>