unpackaged/main/default/objects/loan__Loan_Product__c/recordTypes/loan__Line_Of_Credit_Product_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Line_Of_Credit_Product_Record_Type</fullName>
    <active>true</active>
    <description>Line Of Credit Product Record Type</description>
    <label>Line Of Credit Product Record Type</label>
</RecordType>