unpackaged/main/default/objects/loan__Loan_Product__c/recordTypes/loan__Loan_Product_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>loan__Loan_Product_Record_Type</fullName>
    <active>true</active>
    <description>Actual Interest Based Payment Processing</description>
    <label>Loan Product Record Type</label>
</RecordType>