unpackaged/main/default/objects/loan__Loan_Product__c/recordTypes/loan__Merchant_Cash_Advance.recordType-meta.xml
<RecordType>
    <fullName>loan__Merchant_Cash_Advance</fullName>
    <active>true</active>
    <description>Merchant Cash Advance</description>
    <label>Merchant Cash Advance</label>
</RecordType>