unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Accounting_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Accounting_Type</fullName>
    <active>true</active>
    <errorConditionFormula>(loan__Accrual_Based_Accounting__c &amp;&amp;  loan__Cash_Based_Accounting__c)
||
(NOT(loan__Accrual_Based_Accounting__c) &amp;&amp;  NOT(loan__Cash_Based_Accounting__c))</errorConditionFormula>
    <errorMessage>Both accrual and cash based accounting cannot be checked or unchecked.</errorMessage>
</ValidationRule>