unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Default_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Default_Term</fullName>
    <active>true</active>
    <errorConditionFormula>OR(loan__Default_Number_of_Installments__c &lt; loan__Min_Number_of_Installments__c, loan__Default_Number_of_Installments__c &gt; loan__Max_Number_of_Installments__c)</errorConditionFormula>
    <errorMessage>Default Term is Invalid</errorMessage>
</ValidationRule>