unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Financed_Amount_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Financed_Amount_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(loan__Min_Loan_Amount__c &lt; 0, loan__Max_Loan_Amount__c &lt; 0)</errorConditionFormula>
    <errorMessage>Invalid Minimum and Maximum Financed Amount.</errorMessage>
</ValidationRule>