unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(loan__Min_Interest_Rate__c  &lt; 0, loan__Max_Interest_Rate__c &lt; 0, loan__Max_Interest_Rate__c &lt; loan__Default_Interest_Rate__c, loan__Min_Interest_Rate__c &gt; loan__Default_Interest_Rate__c )</errorConditionFormula>
    <errorMessage>Invalid Interest Rate</errorMessage>
</ValidationRule>