unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Loan_Cycle_Setup_For_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Loan_Cycle_Setup_For_Amount</fullName>
    <active>false</active>
    <description>Deprecated by Abhinav and Snehal, not supported.</description>
    <errorConditionFormula>AND(  ISPICKVAL(loan__Loan_Cycle_Setup__c, 'Same for all Loans') ,OR( ISBLANK( loan__Max_Loan_Amount__c ) , ISBLANK( loan__Min_Loan_Amount__c ) ) )</errorConditionFormula>
    <errorMessage>Please fill out the Loan section.</errorMessage>
</ValidationRule>