unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Loan_Cycle_Setup_For_Interest.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Loan_Cycle_Setup_For_Interest</fullName>
    <active>false</active>
    <description>Deprecated by Abhinav and Snehal, not supported.</description>
    <errorConditionFormula>AND(  ISPICKVAL(loan__Loan_Cycle_Setup__c, 'Same for all Loans') ,OR( ISBLANK( loan__Max_Interest_Rate__c ) , ISBLANK( loan__Min_Interest_Rate__c ),ISBLANK( loan__Default_Interest_Rate__c )  ) )</errorConditionFormula>
    <errorMessage>Please fill out the Interest section.</errorMessage>
</ValidationRule>