unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Loan_Product_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Loan_Product_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (RecordType.DeveloperName == 'Loan_Product_Record_Type') &amp;&amp; (  NOT(ISPICKVAL(loan__Loan_Product_Type__c, 'Loan'))  ) , true, false)</errorConditionFormula>
    <errorMessage>Product type should be 'Loan'.</errorMessage>
</ValidationRule>