unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_LOC_Product_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_LOC_Product_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (RecordType.DeveloperName == 'Line_Of_Credit_Product_Record_Type') &amp;&amp; (  NOT(ISPICKVAL(loan__Loan_Product_Type__c, 'Line of Credit'))  ) , true, false)</errorConditionFormula>
    <errorMessage>Product type should be 'Line of Credit'.</errorMessage>
</ValidationRule>