unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Product_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Product_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name) || ISNULL(Name)</errorConditionFormula>
    <errorMessage>Loan Product name cannot be blank.</errorMessage>
</ValidationRule>