unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Product_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Product_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(loan__Loan_Product_Type__c,"")</errorConditionFormula>
    <errorMessage>Product Type Cannot be Null</errorMessage>
</ValidationRule>