unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Sliding_Billing_Setup.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Sliding_Billing_Setup</fullName>
    <active>true</active>
    <description>This checks that sliding billing setup is set on the product when draw or repayment billing method is Sliding Billing and vice versa.</description>
    <errorConditionFormula>OR ( AND( OR( ISPICKVAL( loan__Draw_Billing_Method__c , 'Sliding Billing'), ISPICKVAL( loan__Repayment_Billing_Method__c , 'Sliding Billing')),  loan__Sliding_Billing_Setup__c == '' ),

 AND( loan__Sliding_Billing_Setup__c != '',  AND( NOT( ISPICKVAL( loan__Draw_Billing_Method__c , 'Sliding Billing') ),  NOT( ISPICKVAL( loan__Repayment_Billing_Method__c , 'Sliding Billing') ) ) )
)</errorConditionFormula>
    <errorMessage>Sliding Billing Setup should be set on the product when Draw or Repayment Billing Method is Sliding Billing and vice versa.</errorMessage>
</ValidationRule>