unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_TDS_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_TDS_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(loan__TDS_Type__c,''))  &amp;&amp; ( ISNULL(loan__TDS_Percentage__c) ||  loan__TDS_Percentage__c &lt;= 0)</errorConditionFormula>
    <errorMessage>TDS Percentage cannot be Zero or null</errorMessage>
</ValidationRule>