unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Term_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Term_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR( loan__Min_Number_of_Installments__c &lt; 0 , loan__Max_Number_of_Installments__c &lt; 0, loan__Default_Number_of_Installments__c &lt; 0)</errorConditionFormula>
    <errorMessage>Term cannot be less than 0.</errorMessage>
</ValidationRule>