unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Check_Unique_Loan_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Unique_Loan_Product</fullName>
    <active>true</active>
    <errorConditionFormula>Name = VLOOKUP( $ObjectType.loan__Loan_Product__c.Fields.Name , $ObjectType.loan__Loan_Product__c.Fields.Name , Name )
&amp;&amp;
Id &lt;&gt; VLOOKUP( $ObjectType.loan__Loan_Product__c.Fields.Id , $ObjectType.loan__Loan_Product__c.Fields.Name , Name )</errorConditionFormula>
    <errorMessage>Loan Product Name already exists.</errorMessage>
</ValidationRule>