unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Count_Loan_Approval_Prereqs.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Count_Loan_Approval_Prereqs</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Number_Of_Prereqs__c &gt; 1</errorConditionFormula>
    <errorMessage>You can only associate one Loan Approval Prerequisite with a Loan Product.</errorMessage>
</ValidationRule>