unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Floating_Interest_Rate_Index_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Floating_Interest_Rate_Index_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Interest_Rate_Type__c,"Floating"),
     ISBLANK(loan__Floating_Rate_Index__c))</errorConditionFormula>
    <errorDisplayField>loan__Floating_Rate_Index__c</errorDisplayField>
    <errorMessage>Floating Rate Index cannot be null for a Lending Product with Interest Type 'Floating'.</errorMessage>
</ValidationRule>