unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Floating_Rate_Change_Action_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Floating_Rate_Change_Action_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Interest_Rate_Type__c,'Floating'), NOT(ISPICKVAL( loan__Loan_Product_Type__c, 'Line of Credit')),
    ISBLANK(TEXT(loan__Floating_Rate_Change_Action__c)))</errorConditionFormula>
    <errorDisplayField>loan__Floating_Rate_Change_Action__c</errorDisplayField>
    <errorMessage>Floating Rate Change Action cannot be null for a Lending Product with Interest Type 'Floating'.</errorMessage>
</ValidationRule>