unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Funding_in_Tranches_in_Line_of_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Funding_in_Tranches_in_Line_of_Credit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Product_Type__c, 'Line of Credit'), loan__Funding_in_Tranches__c)</errorConditionFormula>
    <errorMessage>Funding in Tranches cannot be checked for 'Line of Credit' Product Type</errorMessage>
</ValidationRule>