unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Interest_Only_Period_Value_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Interest_Only_Period_Value_Check</fullName>
    <active>true</active>
    <description>Interest only period shouldn't be negative</description>
    <errorConditionFormula>loan__Interest_Only_Period__c  &lt; 0</errorConditionFormula>
    <errorMessage>'Interest Only Period' can't be negative</errorMessage>
</ValidationRule>