unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Interest_Only_Product_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Interest_Only_Product_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( loan__Interest_Calculation_Method__c , 'Interest Only'),
ISBLANK(loan__Interest_Only_Period__c)
)</errorConditionFormula>
    <errorMessage>'Interest Only Period' must be provided for an 'Interest Only' product.</errorMessage>
</ValidationRule>