unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Interest_Rate_Boundary_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Interest_Rate_Boundary_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Cycle_Setup__c, 'Same for all Loans'),(loan__Default_Interest_Rate__c &gt; loan__Max_Interest_Rate__c
||
loan__Default_Interest_Rate__c &lt; loan__Min_Interest_Rate__c))</errorConditionFormula>
    <errorMessage>The Default Interest Rate should fall between the specified Limits.</errorMessage>
</ValidationRule>