unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Negative_Late_Charge_Grace_Days_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Negative_Late_Charge_Grace_Days_Check</fullName>
    <active>true</active>
    <description>"Late Charge Grace Days" cannot be negative</description>
    <errorConditionFormula>loan__Late_Charge_Grace_Days__c &lt; 0</errorConditionFormula>
    <errorDisplayField>loan__Late_Charge_Grace_Days__c</errorDisplayField>
    <errorMessage>'Late Charge Grace Days' cannot be negative</errorMessage>
</ValidationRule>