unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Negative_Write_off_Tolerance_Amount_Chek.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Negative_Write_off_Tolerance_Amount_Chek</fullName>
    <active>true</active>
    <description>'Write off Tolerance Amount' cannot be negative</description>
    <errorConditionFormula>loan__Write_off_Tolerance_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>loan__Write_off_Tolerance_Amount__c</errorDisplayField>
    <errorMessage>'Write off Tolerance Amount' cannot be negative</errorMessage>
</ValidationRule>