unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__No_of_Installments_Boundary_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__No_of_Installments_Boundary_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Loan_Cycle_Setup__c, 'Same for all Loans'),( loan__Default_Number_of_Installments__c &gt; loan__Max_Number_of_Installments__c
||
loan__Default_Number_of_Installments__c &lt; loan__Min_Number_of_Installments__c ))</errorConditionFormula>
    <errorDisplayField>loan__Default_Number_of_Installments__c</errorDisplayField>
    <errorMessage>The default No. of Installments should fall between the specified Limits.</errorMessage>
</ValidationRule>