unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Payment_Tolerance_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Payment_Tolerance_Check</fullName>
    <active>true</active>
    <description>Both Fixed Amount and Tolerance Rate must be specified if Tolerance type is selected and vice-versa</description>
    <errorConditionFormula>OR( AND( ISPICKVAL( loan__Payment_Tolerance_Type__c , ""),
                                        loan__Payment_Tolerance_Fixed_Amount__c &gt;= 0,
                                        loan__Payment_Tolerance_Rate__c &gt;= 0
                                      ),
                                   AND( NOT( ISPICKVAL( loan__Payment_Tolerance_Type__c , "") ),
                                        OR( ISBLANK( loan__Payment_Tolerance_Rate__c ),
                                            ISBLANK( loan__Payment_Tolerance_Fixed_Amount__c )
                                          )
                                      )
                                )</errorConditionFormula>
    <errorMessage>You should specify both Fixed Amount and Tolerance Rate only if Tolerance type is selected.</errorMessage>
</ValidationRule>