unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Pre_Bill_Days_Value_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Pre_Bill_Days_Value_Check</fullName>
    <active>true</active>
    <description>Pre Bill Days shouldn't be negative</description>
    <errorConditionFormula>loan__Pre_Bill_Days__c &lt;0</errorConditionFormula>
    <errorMessage>'Pre Bill Days' can't be negative</errorMessage>
</ValidationRule>