unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Reschedule_Option_Empty_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Reschedule_Option_Empty_Check</fullName>
    <active>true</active>
    <description>Reschedule option on excess payment must be selected, if excess threshold % for reschedule is positive on lending product</description>
    <errorConditionFormula>AND(loan__Excess_Threshold_For_Reschedule__c &gt; 0 , ISPICKVAL(loan__Reschedule_Option_on_Excess_Payment__c, ''))</errorConditionFormula>
    <errorDisplayField>loan__Reschedule_Option_on_Excess_Payment__c</errorDisplayField>
    <errorMessage>You must select a reschedule option on excess payment as a non zero excess threshold % for reschedule is specified on lending product.</errorMessage>
</ValidationRule>