unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Savings_Deposit_type_must_be_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Savings_Deposit_type_must_be_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(loan__Savings_Product__r.loan__Type_of_Deposits__c, "Voluntary")</errorConditionFormula>
    <errorMessage>Savings Must be Mandatory. Check linked Savings Product definition.</errorMessage>
</ValidationRule>