unpackaged/main/default/objects/loan__Loan_Product__c/validationRules/loan__Savings_Product_must_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Savings_Product_must_be_active</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( loan__Savings_Product__r.loan__Status__c , "Active")</errorConditionFormula>
    <errorMessage>Savings Product must be active. Please check its status.</errorMessage>
</ValidationRule>